Addition of custom message box and form transitions
transition from table selection back to welcome form with a set elapse
time

--- a/Restaurant_Application/Restaurant_Application/Restaurant_Application.csproj
+++ b/Restaurant_Application/Restaurant_Application/Restaurant_Application.csproj
@@ -47,6 +47,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="frmMessageBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmMessageBox.Designer.cs">
+      <DependentUpon>frmMessageBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="frmTableSelection.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -62,6 +68,9 @@
     <Compile Include="MySQLClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="frmMessageBox.resx">
+      <DependentUpon>frmMessageBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="frmTableSelection.resx">
       <DependentUpon>frmTableSelection.cs</DependentUpon>
     </EmbeddedResource>
