Menu system Update
UI upgrades plus list box string formatting

--- a/menu system/protype (groupwork)/protype (groupwork).csproj
+++ b/menu system/protype (groupwork)/protype (groupwork).csproj
@@ -49,17 +49,26 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Form1.cs">
+    <Compile Include="frmMenus.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="frmMenus.Designer.cs">
+      <DependentUpon>frmMenus.cs</DependentUpon>
+    </Compile>
+    <Compile Include="FrmTableIdentification.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmTableIdentification.Designer.cs">
+      <DependentUpon>FrmTableIdentification.cs</DependentUpon>
     </Compile>
     <Compile Include="MySQLClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="frmMenus.resx">
+      <DependentUpon>frmMenus.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmTableIdentification.resx">
+      <DependentUpon>FrmTableIdentification.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
