--- a/menu system/protype (groupwork)/protype (groupwork).csproj
+++ b/menu system/protype (groupwork)/protype (groupwork).csproj
@@ -67,6 +67,12 @@
     <Compile Include="FrmTableIdentification.Designer.cs">
       <DependentUpon>FrmTableIdentification.cs</DependentUpon>
     </Compile>
+    <Compile Include="FrmTrackOrder.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FrmTrackOrder.Designer.cs">
+      <DependentUpon>FrmTrackOrder.cs</DependentUpon>
+    </Compile>
     <Compile Include="MySQLClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -78,6 +84,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="FrmTableIdentification.resx">
       <DependentUpon>FrmTableIdentification.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FrmTrackOrder.resx">
+      <DependentUpon>FrmTrackOrder.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
