Variable implementation on all systems
Database connection string implemented for ease of use when testing and
changing database connection variables

--- a/Kitchen_Application/Kitchen_Application/Kitchen_Application.csproj
+++ b/Kitchen_Application/Kitchen_Application/Kitchen_Application.csproj
@@ -53,6 +53,7 @@
     <Compile Include="FrmKitchen.Designer.cs">
       <DependentUpon>FrmKitchen.cs</DependentUpon>
     </Compile>
+    <Compile Include="MySQLClient.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="FrmKitchen.resx">
