--- a/menu system/protype (groupwork)/protype (groupwork).csproj
+++ b/menu system/protype (groupwork)/protype (groupwork).csproj
@@ -36,6 +36,7 @@
   <ItemGroup>
     <Reference Include="MySql.Data">
       <HintPath>H:\MySQLClass\MySQLClass\MySql.Data.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
